# desktop-news

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
conf/: conf.json  prompt.json
responses/: 2023-11-19-1700418165
src/desktop_news/: ConfFileManager.py  IGenerator.py  IPreprocessor.py  IUpdater.py  PromptBuilder.py  Register.py  __main__.py  nytAPI.py
src/desktop_news/Generators/: OpenAIGenerator.py
src/desktop_news/Preprocessors/: OpenAIPreprocessor.py
src/desktop_news/Updaters/: NYTProvider.py  ScenarioUpdater.py  __init__.py
